--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -1,8 +1,44 @@
-.button {
-  background-color: #000000;
-  border: none;
+.Button {
+  width: fit-content;
+  /* display: inline; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-gap: 1rem;
+  white-space: nowrap;
   outline: none;
-  color: #ffffff;
-  padding: 1vw;
+  border: none;
+  background-color: transparent;
+  padding: 1rem 3rem;
+  font-weight: 600;
+  color: white;
   cursor: pointer;
+  border-radius: 0.7rem;
+  background: var(--main-color);
+  transition: background 0.15s ease-in-out;
+  font-family: "Poppins", sans-serif;
+  font-size: var(--font-16);
+}
+
+.Icon {
+  width: fit-content;
+  height: fit-content;
+}
+
+.Inverted {
+  color: var(--main-color);
+  background: var(--white);
+  outline: 2px solid var(--main-color);
+}
+
+.Inverted:hover {
+  background: var(--main-hover-bg-color);
+  color: var(--main-hover-color);
+  outline: 2px solid var(--main-hover-color);
+}
+.Empty {
+  outline: none;
+}
+.Empty:hover {
+  outline: none;
 }
