--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,134 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-family: "Poppins", sans-serif;
+  font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+:root {
+  /* Font Sizes */
+  --font-12: 1.2rem;
+  --font-13: 1.3rem;
+  --font-135: 1.35rem;
+  --font-14: 1.4rem;
+  --font-15: 1.5rem;
+  --font-16: 1.6rem;
+  --font-17: 1.7rem;
+  --font-18: 1.8rem;
+  --font-20: 2rem;
+  --font-22: 2.2rem;
+  --font-24: 2.4rem;
+  --font-26: 2.6rem;
+  --font-30: 3rem;
+  --font-36: 3.6rem;
+  --font-38: 3.8rem;
+  --font-40: 4rem;
+  --font-42: 4.2rem;
+  --font-45: 4.5rem;
+  --font-52: 5.2rem;
+  --font-70: 7rem;
+  --fontv-4: 4vw;
+  --fontv-3: 3vw;
+  --fontv-35: 3.5vw;
+  --max-width: 120rem;
+  --navbar-height: 5.9rem;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* Colors */
+  --pure-white: #ffffff;
+  --pure-black: #000000;
+  --primary-black: #222222;
+  --sec-black: #444444;
+  --ter-black: #888888;
+  --primary-grey: #767676;
+  --sec-grey: #aaaaaa;
+  --ter-grey: #bbbbbb;
+  --border-grey: #dddddd;
+  --quad-grey: #e0e0e0;
+  --pent-grey: #f8f8f8;
+  --light-grey: #eeeeee;
+  --light-bg-grey: #fdfdfd;
+  --primary-orange: #f36a01;
+  --trans-orange-bg: #fff7f2;
+  --warning-yellow: #ffc107;
+  --primary-blue: #108cff;
+  --dark-blue: #0047ff;
+  --sec-blue: #2e7bff;
+  --light-blue: #f6f9ff;
+  --primary-red: #d70808;
+  --green-primary: #0dca09;
+  --green-dark: #039500;
+  --green-bg-light: #e6ffe6;
+  --red-primary: #ff2b2b;
+  --red-bg: #ffecec;
+
+  /* Gradiants */
+  --blue-btn-bg: linear-gradient(90.13deg, #005dfc -7.06%, #0041b1 104.45%);
+  --prefill-blue-gradient: linear-gradient(
+    180deg,
+    #1800e2 0%,
+    rgba(91, 9, 141, 0.98) 100%
+  );
+  --prefill-orange-gradient: linear-gradient(180deg, #f33a00 0%, #fa9a29 100%);
+  --waiting-list-confirmation-text-gradient: linear-gradient(
+    90.13deg,
+    #ff0051 -7.06%,
+    #bd00ff 104.45%
+  );
+}
+
+*::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: rgba(230, 230, 230, 0.2);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(120, 120, 120, 0.3);
+  outline: 1px solid slategrey;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input,
+Button,
+select,
+textarea {
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.filepond--root * {
+  font-size: 1.4rem !important;
+  font-family: "Poppins", sans-serif;
+}
+
+.filepond--credits {
+  display: none;
 }
