Updated profie left sec styling
Co-authored-by: Ujjawal Gupta <UjjawalGupta30@users.noreply.github.com>

--- a/src/Components/ProfileMainSec/ProfileLeftSec/ProfileLeftSec.module.css
+++ b/src/Components/ProfileMainSec/ProfileLeftSec/ProfileLeftSec.module.css
@@ -38,9 +38,11 @@
 
 .Name,
 .Email {
+  width: 15rem;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
-  display: -webkit-box;
+  display: block;
   -webkit-line-clamp: 1; /* number of lines to show */
   line-clamp: 1;
   -webkit-box-orient: vertical;
