Integrated storage info page
Co-authored-by: Ujjawal Gupta <UjjawalGupta30@users.noreply.github.com>

--- a/src/Components/StorageInfoPageMainComp/StorageInfoInfoSec/StorageInfoInfoSec.module.css
+++ b/src/Components/StorageInfoPageMainComp/StorageInfoInfoSec/StorageInfoInfoSec.module.css
@@ -95,3 +95,9 @@
 .PricingTable {
   margin-top: 1.5rem;
 }
+
+.NoData {
+  font-size: var(--font-14);
+  margin-top: 1rem;
+  color: var(--ter-black);
+}
